--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,15 @@
       { "vars": "all", "args": "after-used", "ignoreRestSiblings": true }
     ],
     "@typescript-eslint/no-empty-object-type": "off",
-    "@typescript-eslint/no-explicit-any": "off"  // Allow `any` type
+    "@typescript-eslint/no-explicit-any": "off",  // Allow `any` type
+    "@typescript-eslint/no-unused-expressions": [
+      "error",
+      {
+        "allowShortCircuit": true,   // Allow short-circuiting expressions (e.g., `condition && functionCall()`)
+        "allowTernary": true,        // Allow ternary expressions (e.g., `condition ? value1 : value2`)
+        "allowTaggedTemplates": true // Allow tagged template literals
+      }
+    ]
   },
   "overrides": [
     {
