--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.5.1",
     "install": "^0.13.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
@@ -44,6 +45,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
     "sonner": "^1.7.1",
     "stripe": "^17.5.0",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
