--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.18.1",
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
