--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@sendgrid/mail": "^8.1.4",
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.0",
     "class-variance-authority": "^0.7.1",
