--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
     "sonner": "^1.7.1",
